# kedit

./: .gitignore  CMakeLists.txt  Makefile  README.md  common.h  file.cc  file.h  frame.cc  frame.h  kedit.cc  kedit.h  main.cc  point.cc  point.h  status.cc  status.h  testfile.c
